# RnC-Coding-TP-25-Phase-2

./: Abraham  DHATRI  README.md  rnc1.c  rnc_tp2_dhatri.py
Aanay Tibrewal/: Task2Python.py
Abraham Maina/: T3Link  Task3  task1.py
Abraham Maina/Task6/: Q1  Q3  Question2
Abraham Maina/smart_home_interfaces/: CMakeLists.txt  package.xml
Abraham Maina/smart_home_interfaces/msg/: RoomTemperature.msg
Abraham Maina/smart_home_interfaces/srv/: SmartPlugControl.srv
Abraham Maina/smart_home_system/: package.xml  setup.cfg  setup.py
Aditi_Bakshi/: Code  DSA Task Q1  DSA Task Q2  DSA Task Q3  Linear Regression Code  Logistic Regression Code  OpenCV Task  Task3
Aditi_Bakshi/ROS/: Report on ROS 2 Humble Documentation  home_dashboard.py  package.xml  smart_plug.py  temperature_sensor.py
Hritik/Task1/: SelectionSort.c  pattern.c  setsFunc.c  sum.c
Hritik/Task2/: StudentMarks.py
JASWANTH/task1/: p1.c  p2.c  p3.c  p4.c
JASWANTH/task2/: rnc_student.py
Mansur/Task2/: Student_question.py
Naishaa/: q2.c  task1  task2
Naishaa/Task1/: q1.c  q3.c
Naishaa/Task2/: Student.py
Oishi/Task1/: Q1  Q2  Q3
Saumya/Task 1(C codes)/: rnc2.c  rnc3.c
Saumya/Task 2(Python)/: rnc1.py
Task 1 C language/: TASKPHASE1.docx  Task 1 description.txt
Task 2/: Student.py  TASK PHASE 2 PYTHON.docx  Task2.txt  Task_2.py
Task 3/: Task3.txt
Task 4/: bbrac.c  task4.txt
Task 5/: Task5.txt  bfs.c  dfs.c
Task 8/: CMakeLists.txt  SetPlugState.srv  package.xml  task8.txt
Task-7/: task7.txt
Task1/: c_question_1.c  c_question_2.c  c_question_3.c  c_question_4.c
(+86 files in other folders)
